--- a/meteoecran/static/style.css
+++ b/meteoecran/static/style.css
@@ -4,6 +4,37 @@
  * SPDX-License-Identifier: EUPL-1.2 OR AGPL-3.0-only
  */
 
+/* Control group */
+form > div {
+	margin-block-end: 0.5em;
+}
+
+form > div > label {
+	display: inline-block;
+	margin-inline-end: 1rem;
+	text-align: end;
+	vertical-align: middle;
+	width: 10em;
+	font-style: 100%;
+}
+
+form > div > input:not([type="submit"]) {
+	display: inline-block;
+	padding: 0.25em 0.3em;
+	vertical-align: middle;
+}
+
+form > .controls {
+	margin-inline-start: 11em;
+}
+
+form > div > input[type="submit"] {
+	display: inline-block;
+	padding: 0.25em 0.3em;
+	min-width: 5em;
+	vertical-align: middle;
+}
+
 .title {
 	font-size: 10vh;
 }
