--- a/meteoecran/templates/base.html.jinja
+++ b/meteoecran/templates/base.html.jinja
@@ -23,8 +23,16 @@ SPDX-License-Identifier: EUPL-1.2 OR AGPL-3.0-only
 	<link href="{{ url_for('static', path='/style.css') }}" rel="stylesheet" />
 
 	<style>
+		html,
+		body {
+			width: 100%;
+			height: 100%;
+			margin: 0;
+			padding: 0;
+		}
 		body {
 			font-family: Seravek, 'Gill Sans Nova', Ubuntu, Calibri, 'DejaVu Sans', "Source Sans 3", "Source Sans Pro", sans-serif;
+			line-height: 1;
 		}
 	</style>
 
